Made more changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,10 +7,17 @@ body
     div#firstcell
         h1 Simple TODO APP
         p Please enter a TODO list item! 
-        label(for="TODO") TODO Item: 
-        input(type="text", name="TODO")
-        br
-        input(type="submit" value="Add")
+        form(action="/", method="post")
+            label(for="todo") TODO Item: 
+            input(type="text", name="todo")
+            br
+            input(type="submit" value="Add")
     
     div#secondcell
         p My TODO List
+        ul 
+        - for (let i = 0; i < tasks.length; i++)
+            li= tasks[i].id + " " + tasks[i].task
+                form(action="/delete", method="post")
+                    input(type="hidden", name="id" value=tasks[i].id)
+                    input(type="submit", value="Delete") 
